--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,16 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
-description: A blog about lorem ipsum dolor sit amet
+title: Taylor Turner
+description:  
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Anon Developer
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
-user_title: Software Developer
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
+username: Taylor Turner
+user_description: Taylor bonds cutting edge technology and a niche financial knowledge base to catalyze value-add change for the management of private and institutional capital. As the world of technology and business moves at a faster pace, having one team member that knows the intricacies of both technology and capital management is an indispensable asset for the firm of the future. Teams need to work smarter by utilizing technology to build data-based heuristics for more effective decision making. 
+user_title: Consultant
+email: taylorfturner@gmail.com
+twitter_username: taylorfturner
+github_username:  taylorfturner
 
 # Google-analytics
 google-analytics:
