fixing a couple things

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Consultant
 
 # User settings
 username: Taylor Turner
-user_description: Taylor bonds cutting edge technology and a niche financial knowledge base to catalyze value-add change for everyone -- from small businesses to Fortune 100 enterprises. Taylor's passion is improving the management of private and institutional capital. As the world of technology and business moves at a faster pace, having someone on your team that knows the intricacies of both technology and capital management is an indispensable asset for the firm of the future. Teams need to work smarter by utilizing technology to build data-based heuristics for more effective decision making. 
+user_description: Taylor bonds cutting edge technology and a niche financial knowledge base to catalyze value-add change -- from small businesses to Fortune 100 enterprises. Taylor's passion is improving the management of private and institutional capital. As the world of technology and business moves at a faster pace, having someone on your team that knows the intricacies of both technology and capital management is an indispensable asset for the firm of the future. Teams need to work smarter by utilizing technology to build data-based heuristics for more effective decision making. 
 user_title: Trusted advisor in technology, machine learning, and finance
 email: taylorfturner@gmail.com
 twitter_username: taylorfturner
